# ndscm

./: .bazelrc  MODULE.bazel  go.mod  go.sum
