"""
Theseed

The monorepo of Theseed
"""

module(
    name = "theseed",
    version = "1.0",
)














# Go

bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_connectrpc_cors",



    "com_github_emersion_go_imap_v2",
    "com_github_emersion_go_message",
    "com_github_emersion_go_webdav",
    "com_github_joho_godotenv",
    "com_github_rs_cors",



    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_net",
)

# Grpc
bazel_dep(name = "grpc", version = "1.74.0")



































# Proto

bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "rules_buf", version = "0.4.0")



















